# mimick

./: .dockerignore  .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  install-tools.sh  pyproject.toml
docs/XSS Injection/: 1 - XSS Filter Bypass.md
prompts/: discovery_plan.md  recon_plan.md  reporting_rules.md  system.md  vuln_scan_plan.md
puml/: architecture.puml
src/cannon/: __init__.py  config.py  logger.py  main.py  tracker.py
src/cannon/agent/: core.py
src/cannon/benchmark/: runner.py
src/cannon/llm/: client.py
src/cannon/output/: reporter.py
src/cannon/prompts/: system.py
src/cannon/tools/: __init__.py  arjun.py  base.py  browser.py  curl.py  dalfox.py  ffuf.py  httpx_tool.py  interactsh.py  katana.py  nmap.py  nuclei.py  python_exec.py  report_finding.py  spawn_agent.py  sqlmap.py  subfinder.py  vuln_lookup.py  wafw00f.py
src/cannon/validation/: validator.py
src/cannon/web/: app.py
src/mimick/: __init__.py  config.py  logger.py  main.py  tracker.py
src/mimick/agent/: __init__.py  context.py  core.py  deps.py  runner.py  strategy.py  tools.py  validation.py
src/mimick/benchmark/: runner.py
src/mimick/llm/: client.py
src/mimick/memory/: __init__.py  extractor.py  linker.py  models.py  store.py
src/mimick/output/: reporter.py
src/mimick/planner/: __init__.py  attack_tree.py  catalog.py  models.py  planner.py  search_tree.py
src/mimick/prompts/: system.py  templates.py
src/mimick/templates/: validate.py
src/mimick/tools/: __init__.py  arjun.py  base.py  browser.py  cli_tools.py  curl.py  dalfox.py  ffuf.py  httpx_tool.py  katana.py  (+10 more)
(+6 files in other folders)
