[project]
name = "cannon"
version = "0.1.0"
description = "AI-powered web penetration testing agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai[openai,anthropic]>=1.0.5",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "click>=8.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "playwright>=1.40.0",
    "pyyaml>=6.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.6",
]

[project.scripts]
cannon = "cannon.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cannon"]
